cambio de versiones:  - hibernate a 3.5  - spring a 3.0.2.RELEASE  - se saca log4j y se usa slf4j-api  - se deja slf4j-nop para los tests